refreshed README and included gameplay demo .gif