@@ -1,22 +1,18 @@
 # Battleship_Final_Project
 
-GUI implementation of battleship board game.  Final project for COMP 220 F2022.
+GUI implementation of the board game Battleship.  Final project for COMP 220 Fall 2022 at Grove City College.
 
-To-Do List (or preferred: create an issue on GitHub):
-- [ ] task 1
-- [x] task 2
+### How to Play
+* Choose a difficulty level for your opponent, the computer
+   * Easy, Medium, Hard, or God-Mode
+* Arrange your ship layout in an intuitive click-and-place window
+* To guess, simply click a square in your upper board.  No more slow, verbal requests to another human player!
+* View your opponent's ship layout at the end of the game
 
-#### How to get JavaFX working in IntelliJ with this project (assuming you've already installed JavaFX from [here](https://gluonhq.com/products/javafx/):
+### Gameplay Demo
+![BBUISMJKvriv6147](https://user-images.githubusercontent.com/97372919/207955211-2c2bab4e-49de-4ed8-bd8b-ac0b2934aa87.gif)
 
-1. Add openjfx to libraries project setting
 
-   File > Project Structure > Libraries > (plus to add Java library) > insert path to (...)/.openjfx/javafx-sdk-19/lib
-
-2. Add VM run configuration:
-   Run > Edit Configurations > (plus to add new configuration) > Application > Modify options > insert
-   --module-path (...)/path/to/javafx/sdk --add-modules javafx.controls,javafx.fxml
-> OK
 
 ### License
-
 [MIT License](LICENSE.md)
